Bug 403669 - Dirty the table geometry when we split row groups. r+sr=dbaron, a=blocking1.9+